Requires
~~~~~~~~
- CPSPortlets > 0.12.1
New features
~~~~~~~~~~~~
- Made the "doc_actions" Portal Box Group Templet of the CPS default theme be a
  rounded box (by taking advantage of new CPSPortlets options).
Bug fixes
~~~~~~~~~
- #1778: Javascript errors on folder_contents
- metafactory wasn't able to configure several instances of a
  single class (namespace collision in form)
- Added "baseurl" parameter to the portlet_conformance_statement definition.
- Removed now useless profiles file.
- Added cache to the Search Portlet.
- Added protocol cache option to the Rotating Image Portlet.
New internal features
~~~~~~~~~~~~~~~~~~~~~
- 