@@ -7,6 +7,7 @@ New features
   rounded box (by taking advantage of new CPSPortlets options).
 Bug fixes
 ~~~~~~~~~
+- catalog folder contents did a too strict filtering on language (regression)
 - #1778: Javascript errors on folder_contents
 - metafactory wasn't able to configure several instances of a
   single class (namespace collision in form)
